--- a/kubernetes/00-ingress.yml
+++ b/kubernetes/00-ingress.yml
@@ -7,8 +7,10 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/backend-protocol: "https"
-    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
+    nginx.ingress.kubernetes.io/preserve-trailing-slash: "false"
     nginx.ingress.kubernetes.io/ssl-passthrough: "false"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^(.+)/$ $1 permanent;
 spec:
   rules:
   - http:
