--- a/kubernetes/04-upload.yml
+++ b/kubernetes/04-upload.yml
@@ -55,10 +55,15 @@ spec:
           - name: VIRTUAL_HOST
             value: "upload.malcolm.local"
         volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
           - mountPath: "/var/www/upload/server/php/chroot/files"
             name: upload-pcap-volume
             subPath: upload
       volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
         - name: upload-pcap-volume
           persistentVolumeClaim:
             claimName: pcap-claim
