--- a/kubernetes/06-arkime.yml
+++ b/kubernetes/06-arkime.yml
@@ -51,3 +51,20 @@ spec:
             value: "true"
           - name: VIRTUAL_HOST
             value: "arkime.malcolm.local"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+          - mountPath: /var/local/curlrc/configmap
+            name: opensearch-curlrc-volume
+          - mountPath: "/data/pcap"
+            name: arkime-pcap-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
+        - name: opensearch-curlrc-volume
+          configMap:
+            name: opensearch-curlrc
+        - name: arkime-pcap-volume
+          persistentVolumeClaim:
+            claimName: pcap-claim
