--- a/kubernetes/07-api.yml
+++ b/kubernetes/07-api.yml
@@ -47,3 +47,15 @@ spec:
             value: "true"
           - name: VIRTUAL_HOST
             value: "api.malcolm.local"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+          - mountPath: /var/local/curlrc/configmap
+            name: opensearch-curlrc-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
+        - name: opensearch-curlrc-volume
+          configMap:
+            name: opensearch-curlrc
