--- a/kubernetes/10-suricata.yml
+++ b/kubernetes/10-suricata.yml
@@ -34,3 +34,15 @@ spec:
         env:
           - name: SURICATA_DISABLED
             value: "true"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+          - mountPath: "/data/pcap"
+            name: suricata-pcap-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
+        - name: suricata-pcap-volume
+          persistentVolumeClaim:
+            claimName: pcap-claim
