--- a/kubernetes/18-netbox.yml
+++ b/kubernetes/18-netbox.yml
@@ -51,6 +51,20 @@ spec:
               name: ssl-env
           - configMapRef:
               name: netbox-env
+          - configMapRef:
+              name: netbox-netbox-env
         env:
           - name: VIRTUAL_HOST
             value: "netbox.malcolm.local"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+          - mountPath: /usr/local/share/configmap
+            name: netbox-netmap-json-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
+        - name: netbox-netmap-json-volume
+          configMap:
+            name: netbox-netmap-json
