--- a/kubernetes/09-zeek.yml
+++ b/kubernetes/09-zeek.yml
@@ -34,3 +34,15 @@ spec:
         env:
           - name: ZEEK_DISABLED
             value: "true"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+          - mountPath: "/pcap"
+            name: zeek-pcap-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
+        - name: zeek-pcap-volume
+          persistentVolumeClaim:
+            claimName: pcap-claim
