--- a/kubernetes/12-filebeat.yml
+++ b/kubernetes/12-filebeat.yml
@@ -53,3 +53,20 @@ spec:
         env:
           - name: FILEBEAT_DISABLED
             value: "true"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+          - mountPath: /var/local/curlrc/configmap
+            name: opensearch-curlrc-volume
+          - mountPath: /certs/configmap
+            name: filebeat-certs-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
+        - name: opensearch-curlrc-volume
+          configMap:
+            name: opensearch-curlrc
+        - name: filebeat-certs-volume
+          configMap:
+            name: filebeat-certs
