--- a/kubernetes/13-logstash.yml
+++ b/kubernetes/13-logstash.yml
@@ -58,3 +58,25 @@ spec:
         env:
           - name: LOGSTASH_DISABLED
             value: "true"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+          - mountPath: /var/local/curlrc/configmap
+            name: opensearch-curlrc-volume
+          - mountPath: /certs/configmap
+            name: logstash-certs-volume
+          - mountPath: /etc/configmap
+            name: logstash-maps-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
+        - name: opensearch-curlrc-volume
+          configMap:
+            name: opensearch-curlrc
+        - name: logstash-certs-volume
+          configMap:
+            name: logstash-certs
+        - name: logstash-maps-volume
+          configMap:
+            name: logstash-maps
