--- a/kubernetes/16-netbox-redis-cache.yml
+++ b/kubernetes/16-netbox-redis-cache.yml
@@ -42,6 +42,15 @@ spec:
               name: ssl-env
           - configMapRef:
               name: netbox-env
+          - configMapRef:
+              name: netbox-redis-cache-env
         env:
           - name: VIRTUAL_HOST
             value: "netbox-redis-cache.malcolm.local"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
