--- a/kubernetes/20-pcap-capture.yml
+++ b/kubernetes/20-pcap-capture.yml
@@ -30,3 +30,16 @@ spec:
         env:
           - name: PCAP_CAPTURE_DISABLED
             value: "true"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+          - mountPath: "/pcap"
+            name: capture-pcap-volume
+            subPath: upload
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
+        - name: capture-pcap-volume
+          persistentVolumeClaim:
+            claimName: pcap-claim
