--- a/kubernetes/23-freq.yml
+++ b/kubernetes/23-freq.yml
@@ -45,3 +45,10 @@ spec:
         env:
           - name: VIRTUAL_HOST
             value: "freq.malcolm.local"
+        volumeMounts:
+          - mountPath: /var/local/ca-trust/configmap
+            name: var-local-catrust-volume
+      volumes:
+        - name: var-local-catrust-volume
+          configMap:
+            name: var-local-catrust
