--- a/kubernetes/opensearch.env
+++ b/kubernetes/opensearch.env
@@ -15,8 +15,8 @@ OPENSEARCH_URL=http://opensearch:9200
 #   user (with a "user:password" value) and "insecure" (if the certificate verification
 #   setting below is 'false'). See cURL config file format at
 #   https://everything.curl.dev/cmdline/configfile. This file is bind mounted locally
-#   from .opensearch.primary.curlrc as /var/local/opensearch.primary.curlrc
-OPENSEARCH_CREDS_CONFIG_FILE=/var/local/opensearch.primary.curlrc
+#   from .opensearch.primary.curlrc as /var/local/curlrc/opensearch.primary.curlrc
+OPENSEARCH_CREDS_CONFIG_FILE=/var/local/curlrc/opensearch.primary.curlrc
 # Whether or not connections to the primary remote OpenSearch instance require full
 #  TLS certificate validation for the connection (this may fail if using self-signed
 #  certificates).
@@ -30,9 +30,19 @@ OPENSEARCH_SECONDARY_URL=
 # Used when OPENSEARCH_SECONDARY is 'true', the cURL-formatted config file contains login
 #   credentials for the secondary OpenSearch instance. The comments describing
 #   OPENSEARCH_CREDS_CONFIG_FILE above also apply here. This file is bind mounted locally
-#   from .opensearch.secondary.curlrc as /var/local/opensearch.secondary.curlrc
-OPENSEARCH_SECONDARY_CREDS_CONFIG_FILE=/var/local/opensearch.secondary.curlrc
+#   from .opensearch.secondary.curlrc as /var/local/curlrc/opensearch.secondary.curlrc
+OPENSEARCH_SECONDARY_CREDS_CONFIG_FILE=/var/local/curlrc/opensearch.secondary.curlrc
 # Whether or not connections to the secondary remote OpenSearch instance require full
 #  TLS certificate validation for the connection (this may fail if using self-signed
 #  certificates).
 OPENSEARCH_SECONDARY_SSL_CERTIFICATE_VERIFICATION=false
+
+logger.level=WARN
+bootstrap.memory_lock=true
+MAX_LOCKED_MEMORY=unlimited
+OPENSEARCH_JAVA_OPTS=-server -Xms4g -Xmx4g -Xss256k -XX:-HeapDumpOnOutOfMemoryError -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true
+discovery.type=single-node
+cluster.routing.allocation.disk.threshold_enabled=false
+cluster.routing.allocation.node_initial_primaries_recoveries=8
+indices.query.bool.max_clause_count=4096
+path.repo=/opt/opensearch/backup
