--- a/kubernetes/04-upload.yml
+++ b/kubernetes/04-upload.yml
@@ -47,11 +47,11 @@ spec:
               name: ssl-env
           - configMapRef:
               name: main-auth-env
+          - configMapRef:
+              name: upload-env
         env:
           - name: UPLOAD_DISABLED
             value: "false"
-          - name: SITE_NAME
-            value: "Malcolm K8s Test"
           - name: VIRTUAL_HOST
             value: "upload.malcolm.local"
         volumeMounts:
