--- a/kubernetes/arkime.env
+++ b/kubernetes/arkime.env
@@ -6,3 +6,5 @@ ARKIME_ANALYZE_PCAP_THREADS=1
 # MaxMind GeoIP database update API key (see
 #   https://support.maxmind.com/hc/en-us/articles/4407116112539-Using-License-Keys)
 MAXMIND_GEOIP_DB_LICENSE_KEY=0
+
+OPENSEARCH_MAX_SHARDS_PER_NODE=2500
