--- a/kubernetes/99-nginx-proxy.yml
+++ b/kubernetes/99-nginx-proxy.yml
@@ -57,29 +57,29 @@ spec:
           successThreshold: 1
           failureThreshold: 10
         volumeMounts:
-        - name: etc-nginx-volume
+        - name: nginx-etc-nginx-volume
           mountPath: /etc/nginx/configmap
-        - name: var-local-catrust-volume
+        - name: nginx-var-local-catrust-volume
           mountPath: /var/local/ca-trust/configmap
-        - name: etc-nginx-certs-volume
+        - name: nginx-etc-nginx-certs-volume
           mountPath: /etc/nginx/certs/configmap
-        - name: etc-nginx-certs-pem-volume
+        - name: nginx-etc-nginx-certs-pem-volume
           mountPath: /etc/nginx/dhparam/configmap
-        - name: opensearch-curlrc-volume
+        - name: nginx-opensearch-curlrc-volume
           mountPath: /var/local/curlrc/configmap
       volumes:
-      - name: etc-nginx-volume
+      - name: nginx-etc-nginx-volume
         configMap:
           name: etc-nginx
-      - name: var-local-catrust-volume
+      - name: nginx-var-local-catrust-volume
         configMap:
           name: var-local-catrust
-      - name: etc-nginx-certs-volume
+      - name: nginx-etc-nginx-certs-volume
         configMap:
           name: etc-nginx-certs
-      - name: etc-nginx-certs-pem-volume
+      - name: nginx-etc-nginx-certs-pem-volume
         configMap:
           name: etc-nginx-certs-pem
-      - name: opensearch-curlrc-volume
+      - name: nginx-opensearch-curlrc-volume
         configMap:
           name: opensearch-curlrc
