fix opensearch curlrc files

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -61,8 +61,8 @@ x-opensearch-variables: &opensearch-variables
   #   user (with a "user:password" value) and "insecure" (if the certificate verification
   #   setting below is 'false'). See cURL config file format at
   #   https://everything.curl.dev/cmdline/configfile. This file is bind mounted locally
-  #   from .opensearch.primary.curlrc as /var/local/opensearch.primary.curlrc
-  OPENSEARCH_CREDS_CONFIG_FILE : '/var/local/opensearch.primary.curlrc'
+  #   from .opensearch.primary.curlrc as /var/local/curlrc/.opensearch.primary.curlrc
+  OPENSEARCH_CREDS_CONFIG_FILE : '/var/local/curlrc/.opensearch.primary.curlrc'
   # Whether or not connections to the primary remote OpenSearch instance require full
   #  TLS certificate validation for the connection (this may fail if using self-signed
   #  certificates).
@@ -76,8 +76,8 @@ x-opensearch-variables: &opensearch-variables
   # Used when OPENSEARCH_SECONDARY is 'true', the cURL-formatted config file contains login
   #   credentials for the secondary OpenSearch instance. The comments describing
   #   OPENSEARCH_CREDS_CONFIG_FILE above also apply here. This file is bind mounted locally
-  #   from .opensearch.secondary.curlrc as /var/local/opensearch.secondary.curlrc
-  OPENSEARCH_SECONDARY_CREDS_CONFIG_FILE : '/var/local/opensearch.secondary.curlrc'
+  #   from .opensearch.secondary.curlrc as /var/local/curlrc/.opensearch.secondary.curlrc
+  OPENSEARCH_SECONDARY_CREDS_CONFIG_FILE : '/var/local/curlrc/.opensearch.secondary.curlrc'
   # Whether or not connections to the secondary remote OpenSearch instance require full
   #  TLS certificate validation for the connection (this may fail if using self-signed
   #  certificates).
@@ -378,8 +378,8 @@ services:
       - IPC_LOCK
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
-      - ./.opensearch.secondary.curlrc:/var/local/opensearch.secondary.curlrc:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
+      - ./.opensearch.secondary.curlrc:/var/local/curlrc/.opensearch.secondary.curlrc:ro
       - ./opensearch:/usr/share/opensearch/data:delegated
       - ./opensearch-backup:/opt/opensearch/backup:delegated
       - ./opensearch/opensearch.keystore:/usr/share/opensearch/config/opensearch.keystore:rw
@@ -407,8 +407,8 @@ services:
       - opensearch
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
-      - ./.opensearch.secondary.curlrc:/var/local/opensearch.secondary.curlrc:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
+      - ./.opensearch.secondary.curlrc:/var/local/curlrc/.opensearch.secondary.curlrc:ro
     healthcheck:
       test: ["CMD", "supervisorctl", "status", "cron", "maps"]
       interval: 60s
@@ -433,7 +433,7 @@ services:
       - dashboards-helper
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
     healthcheck:
       test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5601/dashboards/api/status"]
       interval: 30s
@@ -470,8 +470,8 @@ services:
       - "127.0.0.1:5044:5044"
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
-      - ./.opensearch.secondary.curlrc:/var/local/opensearch.secondary.curlrc:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
+      - ./.opensearch.secondary.curlrc:/var/local/curlrc/.opensearch.secondary.curlrc:ro
       - ./logstash/maps/malcolm_severity.yaml:/etc/malcolm_severity.yaml:ro
       - ./logstash/certs/ca.crt:/certs/ca.crt:ro
       - ./logstash/certs/server.crt:/certs/server.crt:ro
@@ -504,7 +504,7 @@ services:
       - "127.0.0.1:5045:5045"
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
       - nginx-log-path:/nginx:ro
       - ./zeek-logs:/zeek
       - ./suricata-logs:/suricata
@@ -542,7 +542,7 @@ services:
       - opensearch
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
       - ./pcap:/data/pcap
       - ./arkime-logs:/opt/arkime/logs
       - ./arkime-raw:/opt/arkime/raw
@@ -750,7 +750,7 @@ services:
       - opensearch
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
       - ./zeek-logs:/zeek
       - ./pcap:/pcap
     healthcheck:
@@ -954,7 +954,7 @@ services:
       VIRTUAL_HOST : 'api.malcolm.local'
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
+      - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
     healthcheck:
       test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5000/mapi/ping"]
       interval: 30s
