--- a/kubernetes/opensearch.env
+++ b/kubernetes/opensearch.env
@@ -15,8 +15,8 @@ OPENSEARCH_URL=http://opensearch:9200
 #   user (with a "user:password" value) and "insecure" (if the certificate verification
 #   setting below is 'false'). See cURL config file format at
 #   https://everything.curl.dev/cmdline/configfile. This file is bind mounted locally
-#   from .opensearch.primary.curlrc as /var/local/curlrc/opensearch.primary.curlrc
-OPENSEARCH_CREDS_CONFIG_FILE=/var/local/curlrc/opensearch.primary.curlrc
+#   from .opensearch.primary.curlrc as /var/local/curlrc/.opensearch.primary.curlrc
+OPENSEARCH_CREDS_CONFIG_FILE=/var/local/curlrc/.opensearch.primary.curlrc
 # Whether or not connections to the primary remote OpenSearch instance require full
 #  TLS certificate validation for the connection (this may fail if using self-signed
 #  certificates).
@@ -30,8 +30,8 @@ OPENSEARCH_SECONDARY_URL=
 # Used when OPENSEARCH_SECONDARY is 'true', the cURL-formatted config file contains login
 #   credentials for the secondary OpenSearch instance. The comments describing
 #   OPENSEARCH_CREDS_CONFIG_FILE above also apply here. This file is bind mounted locally
-#   from .opensearch.secondary.curlrc as /var/local/curlrc/opensearch.secondary.curlrc
-OPENSEARCH_SECONDARY_CREDS_CONFIG_FILE=/var/local/curlrc/opensearch.secondary.curlrc
+#   from .opensearch.secondary.curlrc as /var/local/curlrc/.opensearch.secondary.curlrc
+OPENSEARCH_SECONDARY_CREDS_CONFIG_FILE=/var/local/curlrc/.opensearch.secondary.curlrc
 # Whether or not connections to the secondary remote OpenSearch instance require full
 #  TLS certificate validation for the connection (this may fail if using self-signed
 #  certificates).
