work in progress moving all environment variables into config instead of docker-compose yml file (install.py and documentation not done yet)

--- a/config/suricata-live.env.example
+++ b/config/suricata-live.env.example
@@ -4,3 +4,5 @@ SURICATA_LIVE_CAPTURE=false
 # Specifies the Suricata runmode for live capture (see
 #   https://suricata.readthedocs.io/en/latest/performance/runmodes.html)
 SURICATA_RUNMODE=workers
+
+SURICATA_PCAP_PROCESSOR=false
