--- a/config/suricata-offline.env.example
+++ b/config/suricata-offline.env.example
@@ -8,3 +8,5 @@ SURICATA_AUTO_ANALYZE_PCAP_THREADS=1
 #   below). If SURICATA_LIVE_CAPTURE is true, this should be false: otherwise
 #   Suricata will see duplicate traffic.
 SURICATA_ROTATED_PCAP=true
+
+SURICATA_PCAP_PROCESSOR=true
