--- a/config/zeek-offline.env.example
+++ b/config/zeek-offline.env.example
@@ -8,3 +8,6 @@ ZEEK_AUTO_ANALYZE_PCAP_THREADS=1
 #   below). If ZEEK_LIVE_CAPTURE is true, this should be false: otherwise
 #   Zeek will see duplicate traffic.
 ZEEK_ROTATED_PCAP=true
+
+ZEEK_PCAP_PROCESSOR=true
+ZEEK_CRON=false
