--- a/kubernetes/06-arkime.yml
+++ b/kubernetes/06-arkime.yml
@@ -43,7 +43,9 @@ spec:
           - configMapRef:
               name: opensearch-env
           - configMapRef:
-              name: common-upload-env
+              name: auth-env
+          - configMapRef:
+              name: upload-common-env
           - configMapRef:
               name: arkime-env
         env:
