--- a/kubernetes/15-netbox-redis.yml
+++ b/kubernetes/15-netbox-redis.yml
@@ -41,7 +41,7 @@ spec:
           - configMapRef:
               name: ssl-env
           - configMapRef:
-              name: netbox-env
+              name: netbox-common-env
           - configMapRef:
               name: netbox-redis-env
         env:
