--- a/.dockerignore
+++ b/.dockerignore
@@ -2,11 +2,11 @@
 **/*.crt
 **/*.iso
 **/*.key
+**/*.env
 **/*.pem
 **/*.keystore
 **/.git*
 **/__pycache__
-**/auth.env
 **/.ldap_config_defaults
 **/htpasswd
 **/malcolm_*images.tar.gz
