--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ exclude:
   - arkime
   - arkime-logs
   - arkime-raw
-  - auth.env
+  - config
   - dashboards
   - docker-compose-standalone.yml
   - docker-compose.yml
