--- a/kubernetes/23-freq.yml
+++ b/kubernetes/23-freq.yml
@@ -41,7 +41,7 @@ spec:
           - configMapRef:
               name: ssl-env
           - configMapRef:
-              name: common-lookup-env
+              name: lookup-common-env
         env:
           - name: VIRTUAL_HOST
             value: "freq.malcolm.local"
