--- a/config/logstash.env.example
+++ b/config/logstash.env.example
@@ -11,5 +11,5 @@ LOGSTASH_SEVERITY_SCORING=true
 LOGSTASH_REVERSE_DNS=false
 # Whether or not Logstash will enrich network traffic metadata via NetBox API calls
 LOGSTASH_NETBOX_ENRICHMENT=false
-
+# Logstash memory allowance and other Java options
 LS_JAVA_OPTS=-server -Xms2g -Xmx2g -Xss1536k -XX:-HeapDumpOnOutOfMemoryError -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true
