--- a/config/opensearch.env.example
+++ b/config/opensearch.env.example
@@ -36,7 +36,7 @@ OPENSEARCH_SECONDARY_CREDS_CONFIG_FILE=/var/local/curlrc/.opensearch.secondary.c
 #  TLS certificate validation for the connection (this may fail if using self-signed
 #  certificates).
 OPENSEARCH_SECONDARY_SSL_CERTIFICATE_VERIFICATION=false
-
+# OpenSearch memory allowance and other Java options
 OPENSEARCH_JAVA_OPTS=-server -Xms4g -Xmx4g -Xss256k -XX:-HeapDumpOnOutOfMemoryError -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true
 
 logger.level=WARN
