--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -410,6 +410,7 @@ services:
       - ./config/process.env
       - ./config/ssl.env
       - ./config/auth.env
+      - ./config/upload.env
     environment:
       VIRTUAL_HOST : 'upload.malcolm.local'
     depends_on:
