--- a/kubernetes/opensearch.env
+++ b/kubernetes/opensearch.env
@@ -3,12 +3,12 @@
 #   primary data store. Set to 'false' if you're connecting to another OpenSearch
 #   cluster, in which case the other environment variables in this section must also
 #   be set with the connection parameters.
-OPENSEARCH_LOCAL=true
+OPENSEARCH_LOCAL=false
 # URL for connecting to OpenSearch instance. When using Malcolm's internal instance
 #   of OpenSearch (i.e., OPENSEARCH_LOCAL is 'true') this should be
 #   'http://opensearch:9200', otherwise specify the primary remote instance URL
 #   in the format 'protocol://host:port'.
-OPENSEARCH_URL=http://opensearch:9200
+OPENSEARCH_URL=http://10.9.0.226:9200
 # Used when OPENSEARCH_LOCAL is 'false', the cURL-formatted config file contains login
 #   credentials for the primary OpenSearch instance. It can be generated for you by the
 #   ./scripts/auth_setup script. The notable parameters expected from this file would be
@@ -16,7 +16,7 @@ OPENSEARCH_URL=http://opensearch:9200
 #   setting below is 'false'). See cURL config file format at
 #   https://everything.curl.dev/cmdline/configfile. This file is bind mounted locally
 #   from .opensearch.primary.curlrc as /var/local/curlrc/opensearch.primary.curlrc
-OPENSEARCH_CREDS_CONFIG_FILE=/var/local/curlrc/opensearch.primary.curlrc
+OPENSEARCH_CREDS_CONFIG_FILE=/var/local/curlrc/.opensearch.primary.curlrc
 # Whether or not connections to the primary remote OpenSearch instance require full
 #  TLS certificate validation for the connection (this may fail if using self-signed
 #  certificates).
