--- a/kubernetes/07-api.yml
+++ b/kubernetes/07-api.yml
@@ -33,6 +33,8 @@ spec:
         imagePullPolicy: Always
         stdin: false
         tty: true
+        command: ["gunicorn"]
+        args: ["--bind", "0:5000", "manage:app"]
         ports:
           - containerPort: 5000
         envFrom:
@@ -43,10 +45,20 @@ spec:
           - configMapRef:
               name: opensearch-env
         env:
-          - name: API_DISABLED
-            value: "true"
           - name: VIRTUAL_HOST
             value: "api.malcolm.local"
+        livenessProbe:
+          exec:
+            command:
+            - curl
+            - --silent
+            - --fail
+            - http://localhost:5000/mapi/ping
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          timeoutSeconds: 15
+          successThreshold: 1
+          failureThreshold: 10
         volumeMounts:
           - mountPath: /var/local/ca-trust/configmap
             name: api-var-local-catrust-volume
